<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView_stallImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_circle"
        android:padding="20dp"
        android:src="@drawable/ic_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_review"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="@id/imageView_stallImage"
        app:layout_constraintRight_toRightOf="@id/imageView_stallImage"
        app:layout_constraintTop_toBottomOf="@id/imageView_stallImage" />

    <EditText
        android:id="@+id/editText_review"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/add_review"
        app:layout_constraintEnd_toEndOf="@+id/textView_heading"
        app:layout_constraintStart_toStartOf="@+id/textView_heading"
        app:layout_constraintTop_toBottomOf="@+id/textView_heading" />


    <TextView
        android:id="@+id/textView_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="@id/editText_review"
        app:layout_constraintRight_toLeftOf="@id/textView_cancel"
        app:layout_constraintTop_toBottomOf="@id/editText_review" />

    <TextView
        android:id="@+id/textView_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toRightOf="@id/textView_add"
        app:layout_constraintRight_toRightOf="@id/editText_review"
        app:layout_constraintTop_toBottomOf="@id/editText_review" />

</androidx.constraintlayout.widget.ConstraintLayout>