<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp">


    <ImageView
        android:id="@+id/imageView_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_circle"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_48sdp"
        android:text="awais2075"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/imageView_profile"
        app:layout_constraintRight_toRightOf="@id/imageView_profile"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="awais2075@gmail.com"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/textView_userName"
        app:layout_constraintRight_toRightOf="@id/textView_userName"
        app:layout_constraintTop_toBottomOf="@id/textView_userName" />

    <EditText
        android:id="@+id/editText_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/first_name"
        android:inputType="none"
        app:layout_constraintLeft_toLeftOf="@id/textView_email"
        app:layout_constraintRight_toRightOf="@id/textView_email"
        app:layout_constraintTop_toBottomOf="@id/textView_email" />

    <EditText
        android:id="@+id/editText_surName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/surname"
        app:layout_constraintLeft_toLeftOf="@id/editText_firstName"
        app:layout_constraintRight_toRightOf="@id/editText_firstName"
        app:layout_constraintTop_toBottomOf="@id/editText_firstName" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/drawable_rectangle"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/editText_surName"
        app:layout_constraintRight_toRightOf="@id/editText_surName"
        app:layout_constraintTop_toBottomOf="@id/editText_surName" />
</androidx.constraintlayout.widget.ConstraintLayout>